fix: fly.toml 수정
mounts 추가

--- a/jenkins/fly.toml
+++ b/jenkins/fly.toml
@@ -8,6 +8,10 @@ primary_region = 'sjc'
 
 [build]
 
+[[mounts]]
+  source = "jenkins_home"
+  destination = "/var/jenkins_home"
+
 [http_service]
   internal_port = 8080
   force_https = true
